@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-01T01:26:31Z",
-  "count_outdated" : 7722,
-  "uniques_outdated" : 3369,
-  "count" : 7827,
-  "uniques" : 3440,
+  "timestamp" : "2024-06-01T12:33:51Z",
+  "count_outdated" : 7724,
+  "uniques_outdated" : 3371,
+  "count" : 7828,
+  "uniques" : 3441,
   "clones" : [
-    {
-      "timestamp": "2024-05-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2024-05-19T00:00:00Z",
       "count": 5,
@@ -130,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-06-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
