@@ -3,11 +3,6 @@
   "uniques": 49,
   "clones": [
     {
-      "timestamp": "2024-05-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-05-19T00:00:00Z",
       "count": 5,
       "uniques": 3
@@ -71,6 +66,11 @@
       "timestamp": "2024-05-31T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-06-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
